--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "json-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,5 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "json-server": "^0.17.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Aakash928/json-server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Aakash928/json-server/issues"
+  },
+  "homepage": "https://github.com/Aakash928/json-server#readme",
+  "description": ""
 }
